--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.19.3",
     "react-icons": "^4.4.0",
+    "react-image-file-resizer": "^0.4.8",
     "react-redux": "^8.1.3",
     "react-router-dom": "^5.3.0",
     "react-scripts": "^5.0.1",
