--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-scripts": "^5.0.1",
     "react-simple-star-rating": "^3.0.0",
     "react-swipeable-views": "^0.14.0",
+    "web-push": "^3.6.6",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
